Backport "Bugfix 0.22.0.rc1" to v0.22 (#6401)
* Bugfix 0.22.0.rc1 (#6381)

* Declare colors for filter button

* Call organization_colors inside decidim-admin

* Different translations for proposals' states and initiatives' state

* Re-fix by having totally different i18n scopes for proposals and initiatives

* Fix color links on author_name and hide/show replies and reply links

* Fix misaligned error on proposal cards

* Fix lint code on filterable_helper

* Fix truncate not applied in Last Activity cards

* Fix missing username in last activity cards for proposals

* Fix endorsements list 'and X more people' doesn't behave correctly

* Fix random indent style in conversations and notifications

* Let i18n_ctx be optional

* Delete commented tags

* Remove "for %{resource_name}" in Version Control and Fingerprint

* Remove trailing ")" in related assemblies

* Fix unexpected whitespace before "{" in scss

* Remove argument due to method signature

* Fix [CI] Proposals (unit tests) / Tests (pull_request)

* Add last activity card shorten text spec


* Fix last activity card test

* Fix test

--- a/decidim-core/app/assets/stylesheets/decidim/modules/_comments.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/modules/_comments.scss
@@ -94,6 +94,14 @@ $comment-form-bg: $light-gray;
   span{
     margin-right: 0;
   }
+
+  &.muted-link{
+    color: $anchor-color;
+
+    &:hover{
+      color: $anchor-color-hover;
+    }
+  }
 }
 
 .comment__votes{
@@ -225,7 +233,7 @@ $comment-form-bg: $light-gray;
   }
 
   &__is-open &__text-is-open{
-    display: inline-block;
+    display: inline;
   }
 
   &__is-open &__text-is-closed{
